add new A-Frame animation + audio

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,12 @@
       content="Genetic Algorithm is a science-fiction comic taking place following a scientific research group on a mission to find a giant space creature."
     />
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="/js/aframe-bundle.js"></script>
+
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-orbit-controls@1.2.0/dist/aframe-orbit-controls.min.js"></script>
     <script src="https://rawgit.com/gmarty/aframe-ui-components/master/dist/aframe-ui-components.min.js"></script>
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css">
   </head>
 
   <body>
