--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <script src="/js/aframe-orbit-controls.min.js"></script>
     <script src="/js/aframe-ui-components.min.js"></script>
     <link rel="stylesheet" href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css">
+    <script src="https://www.w3counter.com/tracker.js?id=131047"></script>
   </head>
 
   <body>
